...
    android:layout_height="match_parent"
    tools:ignore="RtlHardcoded"
    android:background="#d3d3d3">


    <AutoCompleteTextView
        android:id="@+id/search_fragment_edit_text"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:drawableLeft="@android:drawable/ic_search_category_default"
        android:padding="5dp"
        android:hint="@string/search_by_league"
        android:imeOptions="actionSearch"
...
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"
        android:src="@android:drawable/ic_menu_close_clear_cancel"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_fragment_recycler"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:visibility="visible"
        app:layoutManager="LinearLayoutManager"
...
