<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_fragment_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.detail.TeamDetailFragment"
    android:background="@android:color/white">

    <androidx.core.widget.NestedScrollView
...
                android:layout_margin="@dimen/text_margin"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/detail_fragment_country_text"
                tools:text="French Ligue1" />

            <TextView
                android:id="@+id/detail_fragment_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                tools:text="@string/large_text"
                app:layout_constraintTop_toBottomOf="@id/detail_fragment_league_text" />

...
